add docs getAllPresensi
